WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288869
[UnifiedPDF] [iOS] Plugin missing when loading QLPreviewConverter-generated substituted data for supported MIME types
https://bugs.webkit.org/show_bug.cgi?id=288869
Summary
[UnifiedPDF] [iOS] Plugin missing when loading QLPreviewConverter-generated s...
Abrar Rahman Protyasha
Reported
Friday, February 28, 2025 9:39:34 PM UTC
rdar://145863043
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
Friday, February 28, 2025 9:47:52 PM UTC
Pull request:
https://github.com/WebKit/WebKit/pull/41660
EWS
Comment 2
Friday, February 28, 2025 9:55:45 PM UTC
Committed
291372@main
(9e49e100a02c): <
https://commits.webkit.org/291372@main
> Reviewed commits have been landed. Closing PR #41660 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug